--- a/webapitc2005b/package.json
+++ b/webapitc2005b/package.json
@@ -16,9 +16,10 @@
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "mssql": "^6.3.1",
-    "nodemon": "^2.0.7",
     "swagger-ui-express": "^4.1.6"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.13"
+  },
   "keywords": []
 }
